--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -18,13 +18,13 @@ jobs:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
       - name: Deploy on EC2
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST "bash -s" <<ENDSSH
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "bash -s" <<'ENDSSH'
           set -eux
+
+          # Export secrets for remote shell
+          export NGROK_AUTH_TOKEN='${{ secrets.NGROK_AUTH_TOKEN }}'
+          export GOOGLE_API_KEY='${{ secrets.GOOGLE_API_KEY }}'
 
           APP_DIR=/home/ubuntu/app
           INTERNAL_PORT=7860
@@ -47,19 +47,19 @@ jobs:
           fi
 
           # Configure ngrok
-          ngrok config add-authtoken \$NGROK_AUTH_TOKEN || true
+          ngrok config add-authtoken $NGROK_AUTH_TOKEN || true
 
-          # Ensure APP_DIR exists
-          mkdir -p "\$APP_DIR"
-          rm -rf "\$APP_DIR"/*
+          # Prepare app directory
+          mkdir -p "$APP_DIR"
+          rm -rf "$APP_DIR"/*
 
           # Clone repo
-          git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "\$APP_DIR"
-          cd "\$APP_DIR"
+          git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
+          cd "$APP_DIR"
 
           # Create .env file
-          cat > "\$APP_DIR/.env" <<ENV_EOF
-          GOOGLE_API_KEY='\$GOOGLE_API_KEY'
+          cat > "$APP_DIR/.env" <<ENV_EOF
+          GOOGLE_API_KEY='$GOOGLE_API_KEY'
           ENV_EOF
 
           # Remove old Docker container if exists
@@ -67,24 +67,20 @@ jobs:
             sudo docker rm -f attendance-app || true
           fi
 
-          # Build new Docker image
+          # Build and run Docker container
           IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
-          sudo docker build -t attendance-app:\$IMAGE_TAG "\$APP_DIR"
-
-          # Run Docker container
-          sudo docker run -d --name attendance-app \
-            --env-file "\$APP_DIR/.env" \
-            -p \$EXTERNAL_PORT:\$INTERNAL_PORT attendance-app:\$IMAGE_TAG
+          sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
+          sudo docker run -d --name attendance-app --env-file "$APP_DIR/.env" -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
 
           # Start ngrok
           pkill -f "ngrok http" || true
-          nohup ngrok http \$EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
+          nohup ngrok http $EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
 
           # Wait and save ngrok URL
           for i in {1..12}; do
-            NGROK_URL=\$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
-            if [ -n "\$NGROK_URL" ] && [[ "\$NGROK_URL" != "null" ]]; then
-              echo "\$NGROK_URL" > /home/ubuntu/ngrok_url.txt
+            NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
+            if [ -n "$NGROK_URL" ] && [[ "$NGROK_URL" != "null" ]]; then
+              echo "$NGROK_URL" > /home/ubuntu/ngrok_url.txt
               break
             fi
             sleep 5
