--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -18,17 +18,21 @@ jobs:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
       - name: Deploy on EC2
+        id: deploy
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} "bash -s" <<'ENDSSH'
+          ssh -o StrictHostKeyChecking=no ubuntu@$EC2_HOST "bash -s" <<'ENDSSH'
           set -eux
-
-          # Export secrets for remote shell
-          export NGROK_AUTH_TOKEN='${{ secrets.NGROK_AUTH_TOKEN }}'
-          export GOOGLE_API_KEY='${{ secrets.GOOGLE_API_KEY }}'
 
           APP_DIR=/home/ubuntu/app
           INTERNAL_PORT=7860
           EXTERNAL_PORT=7860
+
+          # Ensure APP_DIR exists
+          mkdir -p "$APP_DIR"
 
           # Install Docker if missing
           if ! command -v docker >/dev/null 2>&1; then
@@ -47,36 +51,34 @@ jobs:
           fi
 
           # Configure ngrok
-          ngrok config add-authtoken $NGROK_AUTH_TOKEN || true
+          ngrok config add-authtoken "$NGROK_AUTH_TOKEN"
 
-          # Prepare app directory
-          mkdir -p "$APP_DIR"
-          rm -rf "$APP_DIR"/*
+          # Stop any previous containers and free port
+          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app\$"; then
+            sudo docker rm -f attendance-app || true
+          fi
+          pkill -f "ngrok http" || true
+          sudo fuser -k $EXTERNAL_PORT/tcp || true
 
-          # Clone repo
+          # Clone or update project
+          rm -rf "$APP_DIR/*"
           git clone https://github.com/Praven4754/Attendance-Assistant-Phidata.git "$APP_DIR"
           cd "$APP_DIR"
 
           # Create .env file
           cat > "$APP_DIR/.env" <<ENV_EOF
-          GOOGLE_API_KEY='$GOOGLE_API_KEY'
+          GOOGLE_API_KEY='${GOOGLE_API_KEY:-not_set}'
           ENV_EOF
-
-          # Remove old Docker container if exists
-          if sudo docker ps -a --format '{{.Names}}' | grep -Eq "^attendance-app\$"; then
-            sudo docker rm -f attendance-app || true
-          fi
 
           # Build and run Docker container
           IMAGE_TAG="attendance-app-$(date +%Y%m%d%H%M%S)"
           sudo docker build -t attendance-app:$IMAGE_TAG "$APP_DIR"
           sudo docker run -d --name attendance-app --env-file "$APP_DIR/.env" -p $EXTERNAL_PORT:$INTERNAL_PORT attendance-app:$IMAGE_TAG
 
-          # Start ngrok
-          pkill -f "ngrok http" || true
+          # Start ngrok in background
           nohup ngrok http $EXTERNAL_PORT > /home/ubuntu/ngrok.log 2>&1 &
 
-          # Wait and save ngrok URL
+          # Wait for tunnel and save URL
           for i in {1..12}; do
             NGROK_URL=$(curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url')
             if [ -n "$NGROK_URL" ] && [[ "$NGROK_URL" != "null" ]]; then
@@ -85,9 +87,7 @@ jobs:
             fi
             sleep 5
           done
-
-          # Print ngrok URL
-          cat /home/ubuntu/ngrok_url.txt
+          echo "$NGROK_URL"
           ENDSSH
 
       - name: Show Ngrok URL
